# GitGov

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Jenkinsfile  README.md  docker-compose.yml  frontend-rules.md  handlers.txt  plan.md  question.md  questions.md  repo_files_filtered.txt  tareas-errores.md  test_data_backup_20260301_032754.client_events.csv  test_data_backup_20260301_032754.github_events.csv
.claude/: settings.json  (+1 more)
gitgov/gitgov-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  supabase_schema.sql  supabase_schema_v2.sql  supabase_schema_v3.sql
gitgov/gitgov-server/src/: auth.rs  db.rs  handlers.rs  integration_tests.rs  jobs.rs  main.rs  models.rs  notifications.rs  openapi.rs
gitgov/gitgov-server/src/handlers/: audit_stream_governance.rs  chat_handler.rs  cli_audit.rs  client_ingest_dashboard.rs  compliance_signals.rs  conversational_runtime.rs  feature_requests.rs  gdpr_clients_identities_scope.rs  github_webhook.rs  integrations.rs  jobs_merges_admin_audit.rs  metrics_endpoint.rs  org_core.rs  org_users_api_keys.rs  policy_admin.rs  policy_change_requests.rs  policy_drift_audit.rs  prelude_health.rs  sse.rs  tests.rs  violations_policy_export.rs
gitgov/gitgov-server/supabase/: supabase_schema_v10.sql  supabase_schema_v11.sql  supabase_schema_v12.sql  supabase_schema_v13.sql  supabase_schema_v18.sql  supabase_schema_v4.sql  supabase_schema_v5.sql  supabase_schema_v6.sql  supabase_schema_v7.sql  supabase_schema_v8.sql  supabase_schema_v9.sql
gitgov/gitgov-server/tests/: chat_capacity_test.py  e2e_flow_test.sh  forensic_preprod_scan.py  jenkins_integration_test.sh  jira_integration_test.sh  outbox_rollout_guard.py  perf_baseline_control_plane.py  run_outbox_stability_window.py  smoke_contract.sh  stress_test.sh  tmp_q8_events_payload.json  tune_outbox_coordination.py
gitgov/src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater-staging.conf.json
gitgov/src-tauri/capabilities/: default.json
gitgov/src-tauri/icons/: icon.icns
gitgov/src-tauri/src/: lib.rs  main.rs
(+323 files in other folders)
