[package]
name = "gitgov-server"
version = "0.1.0"
edition = "2021"
description = "GitGov Control Plane - Centralized audit and policy server"

[[bin]]
name = "gitgov-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
bcrypt = "0.16"
toml = "0.8"
glob = "0.3"
sha2 = "0.10"
dotenvy = "0.15"
hmac = "0.12"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
atty = "0.2"
regex = "1"
